[build-system]
requires = ["git-versiointi>=1.7c4", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sivustohaku"
description = "Django-sivuston laajuinen tekstihaku"
readme = "README.md"
authors = [
  {name = "Antti Hautaniemi", email = "antti.hautaniemi@me.com"},
]
license = {file = "Oikeudet.txt"}
requires-python = ">= 3.11"
dynamic = ["version"]
dependencies = ["django>=5.2"]

[project.urls]
Repository = "https://github.com/an7oine/django-sivustohaku.git"

[tool.setuptools]
py-modules = ["sivustohaku"]
